Adding help button to editor

--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -44,6 +44,9 @@
       <span>Link</span></a>
     <a href="#" id="function-image" class="function-button">
       <span>Image</span></a>
+    <span class="function-divider">&nbsp;</span>
+    <a href="#" id="function-help" class="function-button">
+      <span>Help</span></a>
       
     <div id="gollum-editor-format-selector"> 
       <select id="wiki_format" name="format">
