Compare needs back to page history button on bottom, too

--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -24,6 +24,8 @@
 </div>
 <div id="footer">
   <ul class="actions">
+    <li class="minibutton"><a href="/history/{{escaped_name}}"
+       class="action-page-history">Back to Page History</a></li>
     <li class="minibutton"><a href="#">Back to Top</a></li>
   </ul>
 </div>
