Template out inline help functionality

--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -59,6 +59,29 @@
       <label for="format">Edit Mode</label>
     </div>
   </div>
+  <div id="gollum-editor-help">
+    <ul id="gollum-editor-help-parent">
+      <li><a href="javascript:void(0);" class="selected">Help 1</a></li>
+      <li><a href="javascript:void(0);">Help 1</a></li>
+      <li><a href="javascript:void(0);">Help 1</a></li>
+    </ul>
+    <ul id="gollum-editor-help-list">
+      <li><a href="javascript:void(0);">Help 2</a></li>
+      <li><a href="javascript:void(0);">Help 3</a></li>
+      <li><a href="javascript:void(0);">Help 4</a></li>
+      <li><a href="javascript:void(0);">Help 5</a></li>
+      <li><a href="javascript:void(0);">Help 6</a></li>
+      <li><a href="javascript:void(0);">Help 7</a></li>
+      <li><a href="javascript:void(0);">Help 8</a></li>
+    </ul>
+    <div id="gollum-editor-help-wrapper">
+      <div id="gollum-editor-help-content">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et nibh a lacus egestas blandit. Maecenas felis tortor, mattis quis venenatis in, dictum ut diam. Sed nisi massa, accumsan vel sodales a, pharetra vel tellus. Integer quis metus at erat hendrerit egestas eget et sem. Donec elit nunc, accumsan sed fermentum eget, consectetur non enim. Duis ut risus odio. Pellentesque tristique augue iaculis libero interdum quis fermentum sapien cursus. Quisque justo sapien, molestie non convallis ut, convallis a massa. Nam congue ipsum at turpis semper non bibendum diam pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent euismod, ligula nec sagittis volutpat, ante dolor porttitor turpis, vel convallis velit elit et ipsum. Aenean sit amet purus odio. Fusce fermentum lorem sit amet tortor laoreet a sollicitudin nisl tempor. Maecenas tempus tortor eget libero varius ullamcorper. Donec a felis a sapien venenatis mattis. 
+      </p>
+      </div>
+    </div>
+  </div>
     <textarea id="gollum-editor-body"
      data-markup-lang="markdown" name="content">{{content}}</textarea>
      
