--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -410,3 +410,87 @@ a#function-help:hover span { background-position: -405px -28px; }
   font-weight: normal;
   padding: left;
 }
+
+
+/* @section help */
+#gollum-editor-help {
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  border: 1px solid #ddd;
+  border-width: 0 1px 1px 1px;
+}
+
+  #gollum-editor-help-parent,
+  #gollum-editor-help-list {
+    display: block;
+    float: left;
+    height: 17em;
+    list-style-type: none;
+    overflow: auto;
+    margin: 0;
+    padding: 1em 0;
+    width: 18%;
+  }
+  
+  #gollum-editor-help-parent {
+    border-right: 1px solid #eee;
+  }
+  
+  #gollum-editor-help-list {
+    background: #fafafa;
+    border-right: 1px solid #eee;
+  }
+  
+  #gollum-editor-help-parent li,
+  #gollum-editor-help-list li {
+    font-size: 1.2em;
+    line-height: 1.6em;
+    margin: 0;
+    padding: 0;
+  }
+  
+    #gollum-editor-help-parent li a.selected,
+    #gollum-editor-help-list li a.selected {
+      border: 1px solid #eee;
+      border-width: 1px 0;
+      background: #fff;
+    }
+    
+    #gollum-editor-help-parent li a,
+    #gollum-editor-help-list li a {
+      border: 1px solid transparent;
+      border-width: 1px 0;
+      display: block;
+      font-weight: bold;
+      height: 100%;
+      width: auto;
+      padding: 0.2em 1em;
+      text-shadow: 0 -1px 0 #fff;
+    }
+    
+    #gollum-editor-help-parent li a:hover,
+    #gollum-editor-help-list li a:hover {
+      background: #fff;
+      border-color: #f0f0f0;
+      text-decoration: none;
+    }
+    
+  #gollum-editor-help-wrapper {
+    background: #fff;
+    overflow: auto;
+    height: 17em;
+    padding: 1em;
+  }
+  
+    #gollum-editor-help-content {
+      font-size: 1.2em;
+      margin: 0 1em 0 0.5em;
+      padding: 0;
+      line-height: 1.8em;
+    }
+    
+    #gollum-editor-help-content p {
+      margin: 0 0 1em 0;
+      padding: 0;
+    }
