--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -59,7 +59,7 @@
       <label for="format">Edit Mode</label>
     </div>
   </div>
-  <div id="gollum-editor-help">
+  <div id="gollum-editor-help" class="jaws">
     <ul id="gollum-editor-help-parent">
       <li><a href="javascript:void(0);" class="selected">Help 1</a></li>
       <li><a href="javascript:void(0);">Help 1</a></li>
