Sick of this crap in Firefox

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -3,6 +3,10 @@
   Wiki editor formatting
 */
 
+a {
+  -moz-outline: none !important;
+}
+
 .jaws {
   /* JAWS should see it, but you can't */
   display: block;
