--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -7,12 +7,16 @@
   <link rel="stylesheet" type="text/css" href="/css/dialog.css" media="all">
   <link rel="stylesheet" type="text/css" href="/css/template.css" media="all">
   
+  <!--[if IE 7]>
+  <link rel="stylesheet" type="text/css" href="/css/ie7.css" media="all">
+  <![endif]-->
+  
   <script type="text/javascript" src="/javascript/jquery.js"></script>
   <script type="text/javascript" src="/javascript/gollum.js"></script>
   <script type="text/javascript" src="/javascript/gollum.dialog.js"></script>
   <script type="text/javascript" src="/javascript/gollum.placeholder.js"></script>
   <script type="text/javascript" src="/javascript/gollum.fx.js"></script>
-  <!-- TODO: only load this on the edit page -->
+  
   <script type="text/javascript" 
     src="/javascript/gollum-editor/gollum.editor.js"></script>
   <title>{{title}}</title>
