--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -16,6 +16,7 @@
   <input type="hidden" name="page" id="gollum-editor-page-title" value="{{page_name}}">
   {{/is_edit_page}}
   <div id="gollum-editor-function-bar">
+    <div id="gollum-editor-function-buttons">
     <a href="#" id="function-bold" class="function-button">
       <span>Bold</span></a>
     <a href="#" id="function-italic" class="function-button">
@@ -47,6 +48,7 @@
     <span class="function-divider">&nbsp;</span>
     <a href="#" id="function-help" class="function-button">
       <span>Help</span></a>
+    </div>
       
     <div id="gollum-editor-format-selector"> 
       <select id="wiki_format" name="format">
