--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -9,12 +9,12 @@
 </div>
 <div id="compare-content">
   <div class="data highlight">
-    <table cellpadding="0" cellspacing="0" width="100%">
+    <table cellpadding="0" cellspacing="0">
       {{#lines}}
         <tr>
           <td class="line_numbers">{{ldln}}</td>
           <td class="line_numbers">{{rdln}}</td>
-          <td width="100%">
+          <td>
             <pre><div class="{{class}}">{{line}}</div></pre>
           </td>
         </tr>
