--- a/public/css/dialog.css
+++ b/public/css/dialog.css
@@ -1,12 +1,11 @@
 /* @control dialog */
 
 #gollum-dialog-dialog {
-  display: none;
-  top: 50%;
-  left: 50%;
+  display: block;
   overflow: visible;
   position: absolute;
-  z-index: 1000;
+  top: 50%;
+  left: 50%;
 }
 
 #gollum-dialog-dialog.active {
@@ -14,14 +13,12 @@
 }
 
 #gollum-dialog-dialog-inner {
-  background: transparent;
   margin: 0 0 0 -225px;
   position: relative;
   width: 450px;
-  z-index: 1000;
 
   border: 7px solid #999;
-  border: 7px solid rgba(0, 0, 0, 0.3);
+  border: 7px solid rgba(0, 0, 0, 0.3); 
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -32,7 +29,6 @@
   overflow: hidden;
   padding: 1em;
   
-  filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#f7f7f7', endColorstr='#ffffff');
   background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#ffffff));
   background: -moz-linear-gradient(top, #f7f7f7, #ffffff);
 }
@@ -53,8 +49,10 @@
 }
 
 #gollum-dialog-dialog-body fieldset {
+  display: block;
   border: 0;
   margin: 0;
+  overflow: hidden;
   padding: 0;
 }
 
