--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -2,7 +2,8 @@
 <div id="head">
   <h1>{{title}}</h1>
   <ul class="actions">
-    <li class="minibutton"><a href="#" id="minibutton-new-page">New Page</a></li>
+    <li class="minibutton" class="jaws">
+      <a href="#" id="minibutton-new-page">New Page</a></li>
     <li class="minibutton"><a href="/edit/{{escaped_name}}"
        class="action-edit-page">Edit Page</a></li>
     <li class="minibutton"><a href="/history/{{escaped_name}}"
