--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -40,7 +40,7 @@
           [<a href="/{{escaped_name}}/{{id}}" title="View commit">{{id7}}</a>]
         </td>
         <td class="revert-action">
-          <a href="#" title="Revert to this change" rel="{{id}}">Revert to <span>{{id7}}</span></a>
+          <a href="#" title="Reset to this change" rel="{{id}}">Reset to <span>{{id7}}</span></a>
         </td>
       </tr>
       {{/versions}}
