add tests for creating/updating wikis, fix page name bug along the way

--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -1,6 +1,6 @@
 <div id="gollum-editor" data-escaped-name="{{escaped_name}}" class="{{#is_create_page}}create{{/is_create_page}}{{#is_edit_page}}edit{{/is_edit_page}}">
 {{#is_create_page}}
-<form name="gollum-editor" action="/create/{{escaped_name}}" method="post">
+<form name="gollum-editor" action="/create" method="post">
 {{/is_create_page}}
 {{#is_edit_page}}
 <form name="gollum-editor" action="/edit/{{escaped_name}}" method="post">
