--- a/templates/search.mustache
+++ b/templates/search.mustache
@@ -2,10 +2,8 @@
 <div id="head">
   <h1>Search Results for <strong>{{query}}</strong></h1>
   <ul class="actions">
-    <li class="minibutton"><a href="/edit/{{escaped_name}}"
-       class="action-edit-page">Edit Page</a></li>
-    <li class="minibutton"><a href="/history/{{escaped_name}}"
-       class="action-page-history">Page History</a></li>
+    <li class="minibutton"><a href="/"
+       class="action-edit-page">Home</a></li>
   </ul>
   {{>searchbar}}
 </div>
