better html structure for the compare action menu

--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -4,17 +4,19 @@
   
   <form name="gollum-revert" action="/revert/{{escaped_name}}/{{before}}/{{after}}" method="post">
     <div id="gollum-editor">
-    <ul class="actions">
-      <li class="minibutton"><a href="/history/{{escaped_name}}"
-         class="action-page-history">Back to Page History</a></li>
-    {{#show_revert}}
-      <li class="minibutton">
-        <input type="submit" id="gollum-editor-submit" value="Revert" title="Save current changes">
-      </li>
-    {{/show_revert}}
-    </ul></div>
+      <ul class="actions">
+        <li class="minibutton"><a href="/history/{{escaped_name}}"
+           class="action-page-history">Back to Page History</a></li>
+      {{#show_revert}}
+        <li class="minibutton">
+          <input type="submit" id="gollum-editor-submit" value="Revert" title="Save current changes">
+        </li>
+      {{/show_revert}}
+      </ul>
+      {{>searchbar}}
+    </div>
   </form>
-  {{>searchbar}}
+  
 </div>
 
 {{#message}}
