--- a/templates/compare.mustache
+++ b/templates/compare.mustache
@@ -2,21 +2,11 @@
 <div id="head">
   <h1>History for <strong>{{path}}</strong></h1>
   
-  <form name="gollum-revert" action="/revert/{{escaped_name}}/{{before}}/{{after}}" method="post">
-    <div id="gollum-editor">
-      <ul class="actions">
-        <li class="minibutton"><a href="/history/{{escaped_name}}"
-           class="action-page-history">Back to Page History</a></li>
-      {{#show_revert}}
-        <li class="minibutton">
-          <input type="submit" id="gollum-editor-submit" value="Revert" title="Save current changes">
-        </li>
-      {{/show_revert}}
-      </ul>
-      {{>searchbar}}
-    </div>
-  </form>
-  
+  <ul class="actions">
+    <li class="minibutton"><a href="/history/{{escaped_name}}"
+       class="action-page-history">Back to Page History</a></li>
+  </ul>
+  {{>searchbar}}
 </div>
 
 {{#message}}
@@ -24,6 +14,17 @@
 {{/message}}
 
 <div id="compare-content">
+  
+  {{#show_revert}}
+  <ul class="actions">
+    <li class="minibutton">
+      <form name="gollum-revert" action="/revert/{{escaped_name}}/{{before}}/{{after}}" method="post" id="gollum-revert-form">
+      <a href="#" class="gollum-revert-button">Revert Changes</a>
+      </form>
+    </li>
+  </ul>
+  {{/show_revert}}
+  
   <div class="data highlight">
     <table cellpadding="0" cellspacing="0">
       {{#lines}}
@@ -40,8 +41,11 @@
 </div>
 <div id="footer">
   <ul class="actions">
-    <li class="minibutton"><a href="/history/{{escaped_name}}"
-       class="action-page-history">Back to Page History</a></li>
+    {{#show_revert}}
+    <li class="minibutton">
+      <a href="#" class="gollum-revert-button">Revert Changes</a>
+    </li>
+    {{/show_revert}}
     <li class="minibutton"><a href="#">Back to Top</a></li>
   </ul>
 </div>
