--- a/public/css/gollum.css
+++ b/public/css/gollum.css
@@ -37,7 +37,7 @@ a:hover, a:visited {
 
 /* @section head */
 #head {
-  margin: 4.5em 0 0.5em;
+  margin: 0 0 0.5em;
   padding: 0.5em 0;
   overflow: hidden;
 }
