--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -1,5 +1,12 @@
 <div id="wiki-wrapper" class="page">
 <div id="head">
+  {{#has_header}}
+  <div id="wiki-header" class="gollum-{{header_format}}-content">
+    <div id="header-content">
+      {{{header_content}}}
+    </div>
+  </div>
+  {{/has_header}}
   <h1>{{title}}</h1>
   <ul class="actions">
     <li class="minibutton"><a href="/pages"
