--- a/templates/error.mustache
+++ b/templates/error.mustache
@@ -1,6 +1,6 @@
 <div id="wiki-wrapper" class="error">
   <div id="error">
-    <h1>Error</h1>
+    <h1>{{error}}{{^error}}Error{{/error}}</h1>
     <p>
       {{message}}
     </p>
