--- a/public/css/template.css
+++ b/public/css/template.css
@@ -10,7 +10,7 @@ img {
   border: 0;
 }
 
-#template {
+#wiki-body {
   font-size: 14px;
   line-height: 1.4;
   margin-bottom: 40px;
@@ -22,24 +22,24 @@ a.absent {
 }
 
 /* Primary Body Copy */
-#template p {
+#wiki-body p {
   margin: 1em 0;
   padding: 0;
 }
 
   /* ReST first graf in nested list */
-  #template * li p.first {
+  #wiki-body * li p.first {
     display: inline-block;
   }
 
 /* Headings */
-#template h1, #template h2, #template h3,
-#template h4, #template h5, #template h6 {
+#wiki-body h1, #wiki-body h2, #wiki-body h3,
+#wiki-body h4, #wiki-body h5, #wiki-body h6 {
   margin: 0;
   padding: 0;
 }
 
-#template h1 {
+#wiki-body h1 {
   border-bottom: 1px solid #ccc;
   font-size: 33px; /* was 32, GH is 33px */
   line-height: normal;
@@ -47,20 +47,20 @@ a.absent {
   margin: 0;
 }
 
-#template h2 {
+#wiki-body h2 {
   font-size: 22px;
   line-height: normal;
   margin: 22px 0 0;
   padding: 7px 0 0;
 }
 
-#template h3 {
+#wiki-body h3 {
   font-size: 16px;
   line-height: 26px;
   padding: 26px 0 0;
 }
 
-#template h4 {
+#wiki-body h4 {
   font-size: 14px;
   line-height: 26px;
   padding: 18px 0 4px;
@@ -68,7 +68,7 @@ a.absent {
   text-transform: uppercase;
 }
 
-#template h5 {
+#wiki-body h5 {
   font-size: 13px;
   line-height: 26px;
   margin-bottom: -19px;
@@ -77,7 +77,7 @@ a.absent {
   text-transform: uppercase;
 }
 
-#template h6 {
+#wiki-body h6 {
   color: #666;
   font-size: 14px;
   line-height: 26px;
@@ -87,7 +87,7 @@ a.absent {
   font-variant: italic;
 }
 
-#template hr {
+#wiki-body hr {
   background-color: #ccc;
   color: #ccc;
   border: 2px solid #ccc;
@@ -96,30 +96,30 @@ a.absent {
 }
 
 /* Lists, Blockquotes & Such */
-#template ul,
-#template ol {
+#wiki-body ul,
+#wiki-body ol {
   margin-top: 1.5em;
 }
 
   /* Nested Lists */
-  #template ul li,
-  #template ol li,
-  #template ul li ul,
-  #template ol li ol,
-  #template ul li ol,
-  #template ol li ul,
-  #template ul ul,
-  #template ol ol {
+  #wiki-body ul li,
+  #wiki-body ol li,
+  #wiki-body ul li ul,
+  #wiki-body ol li ol,
+  #wiki-body ul li ol,
+  #wiki-body ol li ul,
+  #wiki-body ul ul,
+  #wiki-body ol ol {
     padding: 0;
     margin: .5em 0 0 1em;
   }
 
-#template dl {
+#wiki-body dl {
   margin: 0;
   padding: 20px 0 0;
 }
 
-  #template dl dt {
+  #wiki-body dl dt {
     font-size: 14px;
     font-weight: bold;
     line-height: normal;
@@ -127,36 +127,36 @@ a.absent {
     padding: 20px 0 0;
   }
 
-    #template dl dt:first-child {
+    #wiki-body dl dt:first-child {
       padding: 0;
     }
 
-  #template dl dd {
+  #wiki-body dl dd {
     font-size: 13px;
     margin: 0;
     padding: 3px 0 0;
   }
 
 /* Tables */
-#template table {
+#wiki-body table {
   border-collapse: collapse;
   margin: 20px 0 0;
   padding: 0;
 }
 
-#template table * tr {
+#wiki-body table * tr {
   border-top: 1px solid #ccc;
   background-color: #fff;
   margin: 0;
   padding: 0;
 }
 
-  #template table * tr:nth-child(2n) {
+  #wiki-body table * tr:nth-child(2n) {
     background-color: #f8f8f8;
   }
 
-  #template table * tr th,
-  #template table * tr td {
+  #wiki-body table * tr th,
+  #wiki-body table * tr td {
     border: 1px solid #ccc;
     text-align: left;
     margin: 0;
@@ -164,19 +164,19 @@ a.absent {
   }
 
 /* Images & Stuff */
-#template img {
+#wiki-body img {
   max-width: 100%;
 }
 
 /* Gollum Image Tags */
 
 /* Framed */
-#template span.frame {
+#wiki-body span.frame {
   display: block;
   overflow: hidden;
 }
 
-  #template span.frame > span {
+  #wiki-body span.frame > span {
     border: 1px solid #ddd;
     display: block;
     float: left;
@@ -186,73 +186,73 @@ a.absent {
     width: auto;
   }
 
-  #template span.frame span img {
+  #wiki-body span.frame span img {
     display: block;
     float: left;
   }
 
-  #template span.frame span span {
+  #wiki-body span.frame span span {
     clear: both;
     color: #333;
     display: block;
     padding: 5px 0 0;
   }
 
-#template span.align-center {
+#wiki-body span.align-center {
   display: block;
   overflow: hidden;
   clear: both;
 }
 
-  #template span.align-center > span {
+  #wiki-body span.align-center > span {
     display: block;
     overflow: hidden;
     margin: 13px auto 0;
     text-align: center;
   }
 
-  #template span.align-center span img {
+  #wiki-body span.align-center span img {
     margin: 0 auto;
     text-align: center;
   }
 
-#template span.align-right {
+#wiki-body span.align-right {
   display: block;
   overflow: hidden;
   clear: both;
 }
 
-  #template span.align-right > span {
+  #wiki-body span.align-right > span {
     display: block;
     overflow: hidden;
     margin: 13px 0 0;
     text-align: right;
   }
 
-  #template span.align-right span img {
+  #wiki-body span.align-right span img {
     margin: 0;
     text-align: right;
   }
 
-#template span.float-left {
+#wiki-body span.float-left {
   display: block;
   margin-right: 13px;
   overflow: hidden;
   float: left;
 }
 
-  #template span.float-left span {
+  #wiki-body span.float-left span {
     margin: 13px 0 0;
   }
 
-#template span.float-right {
+#wiki-body span.float-right {
   display: block;
   margin-left: 13px;
   overflow: hidden;
   float: right;
 }
 
-  #template span.float-right > span {
+  #wiki-body span.float-right > span {
     display: block;
     overflow: hidden;
     margin: 13px auto 0;
@@ -261,7 +261,7 @@ a.absent {
 
 
 /* Code */
-#template code, #template tt {
+#wiki-body code, #wiki-body tt {
   background-color: #f8f8f8;
   border: 1px solid #dedede;
   font-size: 13px;
@@ -272,7 +272,7 @@ a.absent {
   border-radius: 3px;
 }
 
-#template .highlight pre, #template pre {
+#wiki-body .highlight pre, #wiki-body pre {
   background-color: #f8f8f8;
   border: 1px solid #ccc;
   font-size: 13px;
@@ -289,7 +289,7 @@ pre, code {
   font: 12px 'Bitstream Vera Sans Mono','Courier',monospace
 }
 
-#template pre code, #template pre tt {
+#wiki-body pre code, #wiki-body pre tt {
   background-color: transparent;
   border: none;
 }
@@ -298,63 +298,63 @@ pre, code {
   Highlight rules from pull req 191
   https://github.com/eboto/gollum/commit/5df09477abf4a04c82c7fcaa2bd7ee2a85e7ec82
 */
-#template .highlight { background:#fff; }
-#template .highlight .c { color:#998;font-style:italic; }
-#template .highlight .err { color:#a61717;background-color:#e3d2d2; }
-#template .highlight .k { font-weight:bold; }
-#template .highlight .o { font-weight:bold; }
-#template .highlight .cm { color:#998;font-style:italic; }
-#template .highlight .cp { color:#999;font-weight:bold; }
-#template .highlight .c1 { color:#998;font-style:italic; }
-#template .highlight .cs { color:#999;font-weight:bold;font-style:italic; }
-#template .highlight .gd { color:#000;background-color:#fdd; }
-#template .highlight .gd .x { color:#000;background-color:#faa; }
-#template .highlight .ge { font-style:italic; }
-#template .highlight .gr { color:#a00; }
-#template .highlight .gh { color:#999; }
-#template .highlight .gi { color:#000;background-color:#dfd; }
-#template .highlight .gi .x { color:#000;background-color:#afa; }
-#template .highlight .go { color:#888; }
-#template .highlight .gp { color:#555; }
-#template .highlight .gs { font-weight:bold; }
-#template .highlight .gu { color:#800080;font-weight:bold; }
-#template .highlight .gt { color:#a00; }
-#template .highlight .kc { font-weight:bold; }
-#template .highlight .kd { font-weight:bold; }
-#template .highlight .kp { font-weight:bold; }
-#template .highlight .kr { font-weight:bold; }
-#template .highlight .kt { color:#458;font-weight:bold; }
-#template .highlight .m { color:#099; }
-#template .highlight .s { color:#d14; }
-#template .highlight .na { color:#008080; }
-#template .highlight .nb { color:#0086B3; }
-#template .highlight .nc { color:#458;font-weight:bold; }
-#template .highlight .no { color:#008080; }
-#template .highlight .ni { color:#800080; }
-#template .highlight .ne { color:#900;font-weight:bold; }
-#template .highlight .nf { color:#900;font-weight:bold; }
-#template .highlight .nn { color:#555; }
-#template .highlight .nt { color:#000080; }
-#template .highlight .nv { color:#008080; }
-#template .highlight .ow { font-weight:bold; }
-#template .highlight .w { color:#bbb; }
-#template .highlight .mf { color:#099; }
-#template .highlight .mh { color:#099; }
-#template .highlight .mi { color:#099; }
-#template .highlight .mo { color:#099; }
-#template .highlight .sb { color:#d14; }
-#template .highlight .sc { color:#d14; }
-#template .highlight .sd { color:#d14; }
-#template .highlight .s2 { color:#d14; }
-#template .highlight .se { color:#d14; }
-#template .highlight .sh { color:#d14; }
-#template .highlight .si { color:#d14; }
-#template .highlight .sx { color:#d14; }
-#template .highlight .sr { color:#009926; }
-#template .highlight .s1 { color:#d14; }
-#template .highlight .ss { color:#990073; }
-#template .highlight .bp { color:#999; }
-#template .highlight .vc { color:#008080; }
-#template .highlight .vg { color:#008080; }
-#template .highlight .vi { color:#008080; }
-#template .highlight .il { color:#099; }
+#wiki-body .highlight { background:#fff; }
+#wiki-body .highlight .c { color:#998;font-style:italic; }
+#wiki-body .highlight .err { color:#a61717;background-color:#e3d2d2; }
+#wiki-body .highlight .k { font-weight:bold; }
+#wiki-body .highlight .o { font-weight:bold; }
+#wiki-body .highlight .cm { color:#998;font-style:italic; }
+#wiki-body .highlight .cp { color:#999;font-weight:bold; }
+#wiki-body .highlight .c1 { color:#998;font-style:italic; }
+#wiki-body .highlight .cs { color:#999;font-weight:bold;font-style:italic; }
+#wiki-body .highlight .gd { color:#000;background-color:#fdd; }
+#wiki-body .highlight .gd .x { color:#000;background-color:#faa; }
+#wiki-body .highlight .ge { font-style:italic; }
+#wiki-body .highlight .gr { color:#a00; }
+#wiki-body .highlight .gh { color:#999; }
+#wiki-body .highlight .gi { color:#000;background-color:#dfd; }
+#wiki-body .highlight .gi .x { color:#000;background-color:#afa; }
+#wiki-body .highlight .go { color:#888; }
+#wiki-body .highlight .gp { color:#555; }
+#wiki-body .highlight .gs { font-weight:bold; }
+#wiki-body .highlight .gu { color:#800080;font-weight:bold; }
+#wiki-body .highlight .gt { color:#a00; }
+#wiki-body .highlight .kc { font-weight:bold; }
+#wiki-body .highlight .kd { font-weight:bold; }
+#wiki-body .highlight .kp { font-weight:bold; }
+#wiki-body .highlight .kr { font-weight:bold; }
+#wiki-body .highlight .kt { color:#458;font-weight:bold; }
+#wiki-body .highlight .m { color:#099; }
+#wiki-body .highlight .s { color:#d14; }
+#wiki-body .highlight .na { color:#008080; }
+#wiki-body .highlight .nb { color:#0086B3; }
+#wiki-body .highlight .nc { color:#458;font-weight:bold; }
+#wiki-body .highlight .no { color:#008080; }
+#wiki-body .highlight .ni { color:#800080; }
+#wiki-body .highlight .ne { color:#900;font-weight:bold; }
+#wiki-body .highlight .nf { color:#900;font-weight:bold; }
+#wiki-body .highlight .nn { color:#555; }
+#wiki-body .highlight .nt { color:#000080; }
+#wiki-body .highlight .nv { color:#008080; }
+#wiki-body .highlight .ow { font-weight:bold; }
+#wiki-body .highlight .w { color:#bbb; }
+#wiki-body .highlight .mf { color:#099; }
+#wiki-body .highlight .mh { color:#099; }
+#wiki-body .highlight .mi { color:#099; }
+#wiki-body .highlight .mo { color:#099; }
+#wiki-body .highlight .sb { color:#d14; }
+#wiki-body .highlight .sc { color:#d14; }
+#wiki-body .highlight .sd { color:#d14; }
+#wiki-body .highlight .s2 { color:#d14; }
+#wiki-body .highlight .se { color:#d14; }
+#wiki-body .highlight .sh { color:#d14; }
+#wiki-body .highlight .si { color:#d14; }
+#wiki-body .highlight .sx { color:#d14; }
+#wiki-body .highlight .sr { color:#009926; }
+#wiki-body .highlight .s1 { color:#d14; }
+#wiki-body .highlight .ss { color:#990073; }
+#wiki-body .highlight .bp { color:#999; }
+#wiki-body .highlight .vc { color:#008080; }
+#wiki-body .highlight .vg { color:#008080; }
+#wiki-body .highlight .vi { color:#008080; }
+#wiki-body .highlight .il { color:#099; }
