--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -1,15 +1,40 @@
 <div id="wiki-wrapper" class="history">
 <div id="head">
-  <h1>History for <strong>{{title}}</strong></h1>
   <ul class="actions">
-    <li class="minibutton">
-      {{>searchbar}}
-    </li>
-    <li class="minibutton"><a href="/{{escaped_url_path}}"
-       class="action-view-page">View Page</a></li>
+    <li class="minibutton"><a href="/"
+       class="action-edit-page">Home</a></li>
+    <li class="minibutton"><a href="/pages"
+      class="action-all-pages">All Pages</a></li>
+    <li class="minibutton jaws">
+      <a href="#" id="minibutton-new-page">New Page</a></li>
+    {{#editable}}
     <li class="minibutton"><a href="/edit/{{escaped_url_path}}"
        class="action-edit-page">Edit Page</a></li>
+    {{/editable}}
+    <li class="minibutton"><a href="/history/{{escaped_url_path}}"
+       class="action-page-history">Page History</a></li>
+    {{#may_login}}
+    <li class="minibutton">
+      {{#session.username}}
+      <a href="/logout">Logout
+        ({{session.username}})
+      </a>
+      {{/session.username}}
+      {{^session.username}}
+      <a href="/login">Login</a>
+      {{/session.username}}
+    </li>
+    {{/may_login}}
   </ul>
+  {{>searchbar}}
+
+  {{#has_header}}
+  <div id="wiki-header" class="gollum-{{header_format}}-content">
+    <div id="header-content">
+      {{{header_content}}}
+    </div>
+  </div>
+  {{/has_header}}
 </div>
 <div id="wiki-history">
 
