--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -1,14 +1,11 @@
 <div id="wiki-wrapper" class="page">
 <div id="head">
   <ul class="actions">
-    <li class="minibutton">
-      {{>searchbar}}
-    </li>
+    <li class="minibutton"><a href="/"
+       class="action-edit-page">Home</a></li>
     <li class="minibutton"><a href="/pages"
       class="action-all-pages">All Pages</a></li>
-    <li class="minibutton"><a href="/fileview"
-    class="action-all-pages">File View</a></li>
-    <li class="minibutton" class="jaws">
+    <li class="minibutton jaws">
       <a href="#" id="minibutton-new-page">New Page</a></li>
     {{#editable}}
     <li class="minibutton"><a href="/edit/{{escaped_url_path}}"
@@ -16,7 +13,28 @@
     {{/editable}}
     <li class="minibutton"><a href="/history/{{escaped_url_path}}"
        class="action-page-history">Page History</a></li>
+    {{#may_login}}
+    <li class="minibutton">
+      {{#session.username}}
+      <a href="/logout">Logout
+        ({{session.username}})
+      </a>
+      {{/session.username}}
+      {{^session.username}}
+      <a href="/login">Login</a>
+      {{/session.username}}
+    </li>
+    {{/may_login}}
   </ul>
+  {{>searchbar}}
+
+  {{#has_header}}
+  <div id="wiki-header" class="gollum-{{header_format}}-content">
+    <div id="header-content">
+      {{{header_content}}}
+    </div>
+  </div>
+  {{/has_header}}
 </div>
 <div id="wiki-content">
 <div class="{{#has_header}}has-header{{/has_header}}{{#has_footer}} has-footer{{/has_footer}}{{#has_sidebar}} has-rightbar{{/has_sidebar}}{{#has_toc}} has-toc{{/has_toc}}">
@@ -33,13 +51,6 @@
   </div>
   {{/has_sidebar}}
   <div id="wiki-body" class="gollum-{{format}}-content">
-    {{#has_header}}
-    <div id="wiki-header" class="gollum-{{header_format}}-content">
-      <div id="header-content" class="markdown-body">
-        {{{header_content}}}
-      </div>
-    </div>
-    {{/has_header}}
     <div class="markdown-body">
       {{{content}}}
     </div>
