--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -32,11 +32,11 @@
   <header>
     <h1>
       <a href="{{base_url}}/">
-        Freifunk Lübeck
+        Freifunk L&uuml;beck
       </a>
     </h1>
   </header>
-  <aside> 
+  <aside>
     {{#has_sidebar}}
     <div id="wiki-sidebar" class="gollum-{{sidebar_format}}-content">
       <div id="sidebar-content" class="markdown-body">
