--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -36,7 +36,7 @@
       </a>
     </h1>
   </header>
-  <aside>
+  <div class="sidebar">
     {{#has_sidebar}}
     <div id="wiki-sidebar" class="gollum-{{sidebar_format}}-content">
       <div id="sidebar-content" class="markdown-body">
@@ -70,7 +70,7 @@
       </li>
       {{/may_login}}
     </ul>
-  </aside>
+  </div>
 
   {{{yield}}}
 
