--- a/public/gollum/css/gollum.css
+++ b/public/gollum/css/gollum.css
@@ -564,7 +564,7 @@ ul.actions {
 
 /* --- sidebar --- */
 
-aside {
+div.sidebar {
   display: table-cell;
   vertical-align: top;
   font-size: 10pt;
@@ -572,7 +572,7 @@ aside {
   background: #FFF8DE;
 }
 
-aside > div {
+div.sidebar > div {
   width: 250px;
 }
 
@@ -610,19 +610,19 @@ header {
   min-height: 50px;
 }
 
-aside ul.actions {
+div.sidebar ul.actions {
   margin: 0;
   padding: 0 10pt;
 }
 
-aside ul.actions li {
+div.sidebar ul.actions li {
   float: none;
   padding: 0;
   margin: 0;
   font-size: 10pt;
 }
 
-aside h2 {
+div.sidebar h2 {
   padding: 0 10pt;
   font-size: 11pt;
 }
